--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <integer-array  name="androidcolors">
         <item>@color/blue</item>
     </integer-array>
+    <color name="white">#FFF</color>
 </resources>
